syntax = "proto3";
package v1;

import "google/protobuf/timestamp.proto";


message ToDo {

  int64 id = 1;

  string title = 2;

  string description = 3;

  google.protobuf.Timestamp reminder = 4;
}

 // Create new todo task
message AddRequest{

  ToDo toDo = 1;
}

// Return created todo item id
message AddResponse{

  int32 id = 1;
}

// Retrieve one todo item
message ReadRequest{

  int32 id = 1;
}

// Return specified todo item
message ReadResponse{

  ToDo toDo = 1;
}

// Update todo task
message UpdateRequest{

  ToDo toDo = 1;
}

// Updated todo item
message UpdateResponse{

  int32 updated = 1;
}

// Delete todo task
message DeleteRequest{

  int32 id = 1;
}

// Delete todo item
message DeleteResponse{

  int32 deleted = 1;
}

// Retrieve all todo items
message ReadAllRequest{ }

// Return todo items
message ReadAllResponse{

  repeated ToDo toDos = 1;
}

// Service to manage list of todo
service ToDoService {
  rpc Create(AddRequest) returns (AddResponse);

  rpc Read(ReadRequest) returns (ReadResponse);

  rpc Update(UpdateRequest) returns (UpdateResponse);

  rpc Delete(DeleteRequest) returns (DeleteResponse);

  rpc ReadAll(ReadAllRequest) returns (ReadAllResponse);
}